# cpp_cmake_template

./: .gitmodules  CMakeLists.txt
Application/: CMakeLists.txt  program.cpp
Application/include/: user_input.hpp
Application/source/: program.cpp  user_input.cpp
MathLibrary/: CMakeLists.txt
MathLibrary/include/: arithmetic.hpp
MathLibrary/source/: arithmetic.cpp
MathLibrary/test/: CMakeLists.txt  ExampleTests.cpp  MathLibraryTest.cpp
